
2021-xx-xx  2.10.1 [not yet released]
--------------------------------------------------------------------------------
ADD  #28    Streamlines upgrade process by adding one-click-updater.
IMP         Upgrades the bundled runtime to Java 17.
FIX         'Too long' indicator in list overrides all other states, even errors.


2021-07-11  2.10.0
--------------------------------------------------------------------------------
IMP  #59    Inactivates process button if no compilation is possible.
FIX  #61    Failing encoding tests in some environment by explicitly states encoding.
FIX  #58    Crash with wrong Java version by bundling Java with the application.
FIX  #60    In advanced pattern too long breaks with break track were swallowed.
FIX         Settings in the starting window were not reflected in preferences dialog.
FIX         Error when non-integer numbers were entered into duration fields.


2019-03-05  2.9.2
--------------------------------------------------------------------------------
FIX  #56    Continuous enumeration crashes on playlist repeating.


2018-11-15  2.9.1
--------------------------------------------------------------------------------
FIX  #50    Stale output directory yields error.
FIX  #51    OutOfMemoryError when adding long mp3 music file.
FIX  #53    NPE when playing extract (BPM dialog) while file is still importing.


2018-07-19  2.9.0
--------------------------------------------------------------------------------
ADD  #47    Reduce / adapt volume of break track.
FIX  #46    BPM dialog: Music should stop when dialog is closed.
FIX  #48    'Double whistle' special effect can be placed out of range.


2017-11-16  2.8.2
--------------------------------------------------------------------------------
IMP  #43    Add better debug output for compilation generation.
FIX  #41    System diagnosis string shows wrong hdd space.
FIX  #40    Sound effect start time not properly retrieved.