@@ -6,6 +6,7 @@ retorte laboratories (retorte.ch) IntervalMusicCompositor change log
 ADD  #28    Streamlines upgrade process by adding one-click-updater.
 IMP         Upgrades the bundled runtime to Java 17.
 FIX         'Too long' indicator in list overrides all other states, even errors.
+FIX  #62    Tracks in the current directory are not anymore added automatically.
 
 
 2021-07-11  2.10.0
